--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -1,5 +1,6 @@
 /* Global styles */
-body, html {
+body,
+html {
   margin: 0;
   padding: 0;
   overflow-x: hidden;
@@ -8,12 +9,10 @@ body, html {
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   background-color: #f5f5dc;
   color: #2e7d32;
 }
-
-
 
 /* Navbar styles */
 .navbar {
@@ -102,4 +101,40 @@ body {
 .btn-auth:hover {
   background-color: #a5d6a7;
   color: white;
+}
+
+.carbon-box {
+  margin-top: 1rem;
+  background-color: #eafaf2;
+  color: #1f4b2b;
+  font-weight: bold;
+  padding: 0.8rem 1.2rem;
+  border-radius: 12px;
+  font-size: 1.05rem;
+  text-align: left;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.05);
+}
+
+.carbon-box .label {
+  margin-right: 0.4rem;
+}
+
+.carbon-legend-box {
+  background: #f1fdf4;
+  border: 1px solid #b2dfdb;
+  border-radius: 12px;
+  padding: 1rem;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  font-size: 0.9rem;
+  color: #1f4b2b;
+}
+
+.carbon-legend-box ul {
+  padding-left: 1.2rem;
+  margin: 0;
+}
+
+.carbon-legend-box li {
+  margin-bottom: 0.5rem;
 }
